# IR-Controller

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
config/: config.hh.in
include/config/: config.hh
include/utils/: keyboard.hh  keyboard_youtube.hh  utils.hh
src/: main.cpp
src/utils/: keyboard_youtube.cpp  utils.cpp
